[package]
name = "stack-prs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stack-prs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
